[metadata]
# replace with your username:
name = pyresong-bornostojak
version = 0.0.1
author = Borno Stojak
author_email = borno.stojak@gmail.com 
description = PyreSong radio automation python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bornostojak/pyresong
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:mutagen
python_requires = >=3.6
